--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 main:
-  - title: "Posts"
+  - title: "Blog"
     url: /posts/
-  - title: "Categories"
+  - title: "Categorias"
     url: /categories/
   - title: "Significados"
     url: /significados/
   - title: "Tags"
     url: /tags/
-  - title: "About"
-    url: /about/ 
+  - title: "Sobre Nosotros"
+    url: /about/
