--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,9 @@
 main:
-  - title: "Blog"
+  - title: "Artículos"
     url: /posts/
   - title: "Categorias"
     url: /categories/
-  - title: "Significados"
-    url: /significados/
-  - title: "Tags"
-    url: /tags/
+  - title: "Escuela de Tarot"
+    url: /escuela-de-tarot/
   - title: "Sobre Nosotros"
     url: /about/
