--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: amostarot
 locale: es-ES
 # github_username:
-minimal_mistakes_skin: mint
+minimal_mistakes_skin: contrast
 search: true
 logo: "/assets/images/tarotlogo.png"
 
