--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Inicio"
     url: /
 - title: "Artículos"
-  url: /blog/
+  url: /posts/
 
   - title: "Escuela de Tarot"
     url: /escuela-de-tarot/
