--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,9 @@ main:
 
   - title: "Inicio"
     url: /
+  - title: "Artículos"
+    url: /categories/
   - title: "Escuela de Tarot"
     url: /escuela-de-tarot/
   - title: "Sobre Nosotros"
-    url: /about/
+    url: /sobre-nosotros/
