--- a/_config.yml
+++ b/_config.yml
@@ -67,13 +67,13 @@ author:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://circuloceleste.tk"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/amostarot"
-  #  - label: "GitHub"
-  #    icon: "fab fa-fw fa-github"
-  #    url: "https://github.com/"
+    - label: "Faccebook"
+      icon: "fab fa-fw fa-facebook"
+      url: "https://facebook.com/tucirculoceleste"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/amos.tarot"
