--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,8 @@ main:
   - title: "Escuela de Tarot"
     url: /escuela-de-tarot/
   - title: "Servicios"
-      url: /serviios/  
+      url: /serviios/
   - title: "Recibe el Bloletín"
-    url: /sobre-nosotros/
+    url: /
   - title: "Sobre Nosotros"
     url: /sobre-nosotros/
